<resources>
    <string name="app_name">CBM</string>
    <string name="email">E-Mail*</string>
    <string name="password">Password*</string>
    <string name="forgotpassword">Forgot Your Password?</string>
    <string name="login">Login</string>
    <string name="donthaveaccount">DON’T HAVE AN ACCOUNT?<u> SIGN UP</u></string>
    <string name="firstname">First Name*</string>
    <string name="lastname">Last Name*</string>
    <string name="confirmpassword">Confirm Password*</string>
    <string name="phone">Phone*</string>
    <string name="about">About Me*</string>
    <string name="profile">Profile</string>
    <string name="wanttobusiness">WANT TO CREATE A BUSINESS ACCOUNT? <u>CLICK HERE</u></string>
    <string name="agreetext">I AGREE TO TERMS &amp; CONDITIONS FOR CASA BEAU MONDE.</string>
    <string name="team">Team*</string>
    <string name="companyname">Company Name*</string>
    <string name="paypalaccept">Do you want to be hired by customers? If yes,please linkyour Paypal account.</string>
    <string name="profileimage">Profile Image</string>
    <string name="wanttocustomer">Do you want to use CBM as a customer?</string>

    <string-array name="Team">
        <item>- Select Team -</item>
        <item>Boutique</item>
        <item>Retailer</item>
        <item>Influencer</item>
    </string-array>



    <string-array name="Spend">
        <item>200</item>
        <item>150</item>
        <item>100</item>
        <item>50</item>
        <item>10</item>
        <item>5</item>
    </string-array>

    <string-array name="Month">
        <item>- Select Month -</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="Day">
        <item>- Select Day -</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>

    </string-array>

    <string-array name="Year">
        <item>- Select year -</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>

    </string-array>

    <string-array name="Countrt">
        <item>- Select Country -</item>
        <item>Canada</item>
        <item>America</item>
        <item>India</item>


    </string-array>

    <string-array name="EyeColor">
        <item>- Select Color -</item>
        <item>Red</item>
        <item>Black</item>
        <item>Blue</item>


    </string-array>

    <string-array name="Alhabet">
        <item>- Select Alhabet -</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>


    </string-array>

    <string-array name="Price">
        <item>$10-$30</item>
        <item>$30-$60</item>
        <item>$60-$90</item>
        <item>$90-$120</item>
        <item>$120-$150</item>
        <item>$150-$180</item>
        <item>$180-$220</item>
        <item>$220-$250</item>
    </string-array>

    <string-array name="Rate">
        <item>Hourly</item>
        <item>Fixed</item>
    </string-array>

    <string-array name="SearchEvent">
        <item>All</item>
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string-array name="Colors">
        <item>All</item>
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string-array name="Status">
        <item>All Status</item>
        <item>Active</item>
        <item>Inactive</item>
        <item>Cancelled</item>
        <item>Finished</item>
        <item>Expired</item>
    </string-array>

    <string-array name="Status1">
        <item>Active</item>
        <item>Inactive</item>
    </string-array>

    <string-array name="Status2">
        <item>Active</item>
        <item>Inactive</item>
        <item>Cancelled</item>
        <item>Finished</item>
    </string-array>

    <string-array name="Types">
        <item>All types</item>
        <item>Public</item>
        <item>Private</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enteremail">Enter Email</string>
    <string name="enterpassword">Enter Password</string>
    <string name="passwordmesg">Password should be greater than 6 characters</string>
    <string name="close_up">OK</string>
    <string name="currentpassword">Current Password*</string>
    <string name="newpassword">New Password</string>
    <string name="newconfirmpassword">New password confirmation</string>
    <string name="closettitle">Closet Title*</string>
    <string name="closetcheck">This closet is designed for a customer</string>
    <string name="description">Item description</string>
    <string name="image">Cover Image</string>
    <string name="enterfirstname">Enter Firstname</string>
    <string name="enterlastname">Enter Lastname</string>
    <string name="enterconfirmpassword">Enter Confirm Password</string>
    <string name="enterphone">Enter Phone</string>
    <string name="aboutme">Enter About</string>
    <string name="uploadimage">Upload Image</string>
    <string name="passwordnotmatch">Password not matched</string>
    <string name="nointernet">No Internet Connectivity</string>
    <string name="strongpass">Enter Strong Password</string>
    <string name="entercomapanyname">Enter Company Name</string>
    <string name="entercurrentpassword">Enter Current Password</string>
    <string name="enternewpassword">Enter New Password</string>
    <string name="invalidpassword">Invalid Current Password</string>
    <string name="splashtext">© 2020 All right reserved| Privacy Policy</string>
    <string name="logouttext">Are you sure you want to logout?</string>
    <string name="onboardtext">Life isn\'t black and white. Come build Your exquisite world with CASA BEAU MONDE. Created with you in mind, to improve the way you shop and communicate about fashion. Whether you are an inspiring fashionista or an aspiring one, you\'re home with us. Here you will be able to curate and create all the pretty things and live the most stylish of lives with our latest fashion and shopping technology. We can\'t wait to see how you build your beautiful world with us.</string>
    <string name="enterabout">Enter About</string>
    <string name="title">Item Title</string>
    <string name="hours">Hours</string>
    <string name="rate">Rate</string>
    <string name="status">Status</string>
    <string name="category">Category</string>
    <string name="picture">Picture</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="errorvalidate">Validation Errors</string>
    <string name="endingIn">"Card ending in "</string>
    <string name="progressMessage"><![CDATA[Making Payment Please Don\'t Cancel or Close This Window&#8230;]]></string>
    <string name="aboutext">"Life isnâ€™t black and white. Come build an exquisite world with CASA BEAU MONDE. Created with you in mind, to improve the way you shop and communicate about fashion. Whether youâ€™re an inspiring fashionista or an aspiring one, youâ€™re home with us. Here you will be able to curate and create all the pretty things and live the most stylish of lives with our latest fashion and shopping technology. We canâ€™t wait to see how your build your house of beautiful things with us.  "</string>
    <string name="confirmationtext">"Please confirm you want to change your current plan subscription. The new plan amount will be charge now and the amount of the remaining days of the current plan subscription will be refunded. In order to change your plan subscription, you must have at least one verified payment method registered in your profile. "</string>
    <string name="paypalemail">Paypal Email (Optional)</string>
    <string name="title_activity_send_chat">SendChat</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="title_activity_payment_screen_bussiness">PaymentScreenBussiness</string>
</resources>