<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/colorWhite">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_8dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="@dimen/margin_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/default_margin_16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/textsize_16sp">

            </TextView>


            <EditText
                android:id="@+id/editprofile_firstname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:textColor="@color/colorBlack"
                android:hint="@string/enterfirstname"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorTextHint"
                android:padding="@dimen/margin_8dp"
                android:background="@drawable/blackroundcorners">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:layout_marginTop="@dimen/default_margin_16dp"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/textsize_16sp">

            </TextView>


            <EditText
                android:id="@+id/editprofile_lastname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:textColor="@color/colorBlack"
                android:hint="@string/enterlastname"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorTextHint"
                android:padding="@dimen/margin_8dp"
                android:background="@drawable/blackroundcorners">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="@dimen/default_margin_16dp"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/textsize_16sp">

            </TextView>


            <EditText
                android:id="@+id/editprofile_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:textColor="@color/colorBlack"
                android:hint="@string/enteremail"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorTextHint"
                android:padding="@dimen/margin_8dp"
                android:background="@drawable/blackroundcorners">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginTop="@dimen/default_margin_16dp"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/textsize_16sp">

            </TextView>


            <EditText
                android:id="@+id/editprofile_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:textColor="@color/colorBlack"
                android:hint="@string/enterphone"
                android:inputType="phone"
                android:textColorHint="@color/colorTextHint"
                android:padding="@dimen/margin_8dp"
                android:background="@drawable/blackroundcorners">

            </EditText>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:layout_marginTop="@dimen/default_margin_16dp"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/textsize_16sp">

            </TextView>


            <EditText
                android:id="@+id/editprofile_about"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="@dimen/default_margin_16dp"
                android:textColor="@color/colorBlack"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:inputType="text"
                android:textColorHint="@color/colorTextHint"
                android:padding="@dimen/margin_8dp"
                android:background="@drawable/blackroundcorners">

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_marginTop="@dimen/default_margin_16dp">

                <Button
                    android:id="@+id/changepassword_closebt"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_40dp"
                    android:background="@color/colorBlack"
                    android:text="Close"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false">

                </Button>

                <Button
                    android:id="@+id/changepassword_changebt"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_40dp"
                    android:layout_marginLeft="@dimen/default_margin_16dp"
                    android:background="@color/colorBlack"
                    android:text="  Update Profile  "
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite">

                </Button>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>