<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_banner"
    android:id="@+id/parent_login"
    tools:context=".activities.login.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/default_margin_16dp"
            android:background="@drawable/whiteborder">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/email"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_32dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:textSize="@dimen/textsize_16sp">

            </TextView>

            <EditText
                android:id="@+id/login_Email_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:hint="Enter Email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/textsize_16sp"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:padding="@dimen/margin_8dp"
                android:background="@drawable/roundcorners">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/password"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/default_margin_16dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:textSize="@dimen/textsize_16sp">

            </TextView>

            <EditText
                android:id="@+id/login_Password_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:hint="Enter Password"
                android:inputType="textPassword"
                android:textSize="@dimen/textsize_16sp"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:padding="@dimen/margin_8dp"
                android:background="@drawable/roundcorners">

            </EditText>

            <Button
                android:id="@+id/login_LoginBT"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_40dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:background="@drawable/roundcorners"
                android:text="@string/login"
                android:textColor="@color/colorBlack"
                android:textAllCaps="false"
                android:textSize="@dimen/textsize_16sp"></Button>

            <TextView
                android:id="@+id/login_forgot_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/forgotpassword"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/default_margin_16dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:textSize="@dimen/textsize_16sp">

            </TextView>

            <TextView
                android:id="@+id/login_resgiter_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/donthaveaccount"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:textSize="@dimen/textsize_16sp">

            </TextView>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>