<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:background="@drawable/login_banner"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/default_margin_16dp"
            android:gravity="center_vertical"
            android:background="@drawable/whiteborder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_forbusiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:text="@string/wanttobusiness"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_16sp"
                android:textStyle="bold">

            </TextView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:text="@string/firstname"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_16sp"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/register_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@drawable/roundcorners"
                android:hint="First Name"
                android:inputType="textPersonName"
                android:padding="@dimen/margin_8dp"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/textsize_16sp">

            </EditText>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/lastname"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_16sp"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/register_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@drawable/roundcorners"
                android:hint="Last Name"
                android:inputType="textPersonName"
                android:padding="@dimen/margin_8dp"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/textsize_16sp">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/email"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_16sp"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@drawable/roundcorners"
                android:hint="E-mail"
                android:inputType="textEmailAddress"
                android:padding="@dimen/margin_8dp"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/textsize_16sp">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/password"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_16sp"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@drawable/roundcorners"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="@dimen/margin_8dp"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/textsize_16sp">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/confirmpassword"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_16sp"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/register_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@drawable/roundcorners"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:padding="@dimen/margin_8dp"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/textsize_16sp">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/phone"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_16sp"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@drawable/roundcorners"
                android:hint="Phone"
                android:inputType="phone"
                android:padding="@dimen/margin_8dp"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/textsize_16sp">

            </EditText>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/about"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_16sp"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/register_aboutme"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="start"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@drawable/roundcorners"
                android:gravity="start"
                android:inputType="text"
                android:padding="@dimen/margin_8dp"
                android:textAlignment="textStart"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/textsize_16sp">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/profile"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_16sp"
                android:textStyle="bold">

            </TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@drawable/roundcorners"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">

                <Button
                    android:id="@+id/register_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Upload"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite">

                </Button>


                <TextView
                    android:id="@+id/uploadfilename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_16sp">

                </TextView>
            </LinearLayout>


            <CheckBox
                android:id="@+id/agreecheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorWhite"
                android:text="@string/agreetext"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_16sp">

            </CheckBox>


            <Button
                android:id="@+id/register_regiter_bt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_32dp"
                android:background="@drawable/roundcorners"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_16sp">

            </Button>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_32dp"
                android:layout_marginBottom="@dimen/margin_32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Allready have account?"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textsize_16sp">

                </TextView>

                <TextView
                    android:id="@+id/register_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Login"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textsize_16sp">

                </TextView>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>